# razer-ctl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
data/: README.md  annotations.csv  extract_data_from_capture.py  wireshark_dump_raw.csv
librazer/: Cargo.toml
librazer/src/: command.rs  descriptor.rs  device.rs  feature.rs  lib.rs  packet.rs  types.rs
razer-cli/: Cargo.toml
razer-cli/src/: main.rs
razer-tray/: Cargo.toml  build.rs
razer-tray/src/: main.rs
src/: main.rs  razer.rs
src/razer/: command.rs  device.rs  packet.rs  types.rs
