[package]
name = "razer-ctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
clap-num = "1.1.1"
hidapi = "2.6.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.114"
