[package]
name = "razer-cli"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librazer = { path = "../librazer" }
clap = { version = "4.5.1", features = ["derive"] }
clap-num = "1.1.1"
anyhow = "1.0.80"
