[package]
name = "razer-tray"
version = "0.6.0"
edition = "2021"

authors = ["Tarek Dakhran <>"]
homepage = "https://github.com/tdakhran/razer-ctl"
description = "A tray icon for controlling Razer Blade"

[dependencies]
anyhow = "1.0.80"
confy = "0.6.0"
image = "0.24.9"
librazer = { path = "../librazer" }
log = "0.4.21"
log4rs = "1.3.0"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness"] }
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
tao = "0.26.0"
tray-icon = "0.11.3"
